2008-10-14  Sancho Lerena <slerena@artica.es>

	* include/pdf: Removed unused old code (ezPdf library).

2008-10-14  Esteban Sanchez  <estebans@artica.es>

	* include/config_process.php: Added ENTERPRISE_DIR constant.

2008-10-14  Esteban Sanchez  <estebans@artica.es>

	* operation/reporting/reporting_viewer.php,
	operation/reporting/custom_reporting.php: Fixed checking of private
	reports.

	* operation/reporting/custom_reporting.php: Do not show reports that
	user can not see.

2008-10-13  Sancho Lerena  <slerena@artica.es>
	
	* agent_disk_conf_editor.php: Now load enterprise code
	using a normalized code.

	* setup.php: Removed some features of enterprise on setup.

	* functions.php: Added enterprise load code and load hook 
	functions.

	* datos_agente.php: Fixed stupid problem with string data
	deletion.

	* custom_reporting.php:  Now load enterprise code
	using a normalized code.

	* include/help/en/help_tcp_send.php: Added mising help file.

2008-10-13  Jorge Gonzalez  <jorgegonz@artica.es>

	* languages/cs.po, languages/pt_BR.po, languages/es.po,
	  languages/pl.mo, languages/it.mo, languages/sl.mo,
	  languages/uk.po, languages/ro.po, languages/pt.mo,
	  languages/ast.mo, languages/index.pot, languages/Makefile,
	  languages/cs.mo, languages/pt_BR.mo, languages/es.mo,
	  languages/fr.po, languages/uk.mo, languages/ro.mo,
	  languages/ca.po, languages/de.po, languages/sv.po,
	  languages/zh_TW.po, languages/hi.po, languages/zh_CN.po,
	  languages/fr.mo, languages/te.po, languages/eu.po,
	  languages/hu.po, languages/ca.mo, languages/sv.mo,
	  languages/de.mo, languages/ru.po, languages/zh_TW.mo,
	  languages/hi.mo, languages/zh_CN.mo, languages/gl.po,
	  languages/te.mo, languages/eu.mo, languages/hu.mo,
	  languages/pl.po, languages/it.po, languages/sl.po,
	  languages/pt.po, languages/ru.mo, languages/ast.po,
	  languages/gl.mo: updated languages and infrastructure for
	  languages; thanks to the guys working at Rosetta.
